mailhog/overlays/mailhog-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mailhog
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`${MAILHOG_FQDN}`)
      kind: Rule
      services:
        - kind: Service
          name: mailhog
          port: 8025
  # tls:
  #   secretName: ${SECRET_NAME} # mailhog-tls # cert-dev
  #   domains:
  #     - main: ${BASE_DOMAIN}
  #       sans:
  #         - "*.preview.${BASE_DOMAIN}"
  #         - "*.testing.${BASE_DOMAIN}"
